infrastructure/controllers/weave-gitops/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: it-tools
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`git-ops.local.hejsan.xyz`)
      kind: Rule
      services:
        - name: weave-gitops
          port: 9001
      middlewares:
        - name: default-headers
  tls:
    secretName: local-hejsan-xyz-tls
